--- a/GroupUp/Views/Account/Login.cshtml
+++ b/GroupUp/Views/Account/Login.cshtml
@@ -1,7 +1,7 @@
 ﻿@using GroupUp.Models
 @model LoginViewModel
 @{
-    ViewBag.Title = "Oturum aç";
+    ViewBag.Title = "Log in";
 }
 
 <h2>@ViewBag.Title.</h2>
@@ -38,11 +38,11 @@
                 </div>
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Oturum aç" class="btn btn-default" />
+                        <input type="submit" value="Log in" class="btn btn-default" />
                     </div>
                 </div>
                 <p>
-                    @Html.ActionLink("Yeni bir kullanıcı olarak kaydol", "Register")
+                    @Html.ActionLink("Register as a new user", "Register")
                 </p>
                 @* Parola sıfırlama işlevi için hesap doğrulama etkinleştirildiğinde bunu etkinleştirin
                     <p>
