--- a/GroupUp/Views/Manage/Index.cshtml
+++ b/GroupUp/Views/Manage/Index.cshtml
@@ -1,9 +1,9 @@
 ﻿@model GroupUp.Models.IndexViewModel
 @{
-    ViewBag.Title = "Yönet";
+    ViewBag.Title = "Manage Account";
 }
 
-<h2>@ViewBag.Title.</h2>
+<h2>@ViewBag.Title</h2>
 
 <p class="text-success">@ViewBag.StatusMessage</p>
 <div>
