--- a/GroupUp/Views/Groups/MemberDetails.cshtml
+++ b/GroupUp/Views/Groups/MemberDetails.cshtml
@@ -14,8 +14,9 @@ else
 {
     <p>Group Title: @Model.Group.Title</p>
     <p>Group Description: @Model.Group.Description</p>
-    <p>Group Members:</p>
+    <p><strong>Group Location:</strong> @Model.Group.City, @Model.Group.Country, @Model.Group.Continent</p>
     @Html.ActionLink("Report Group", "ReportGroup", "Reports", new {groupId = Model.Group.GroupId}, new{@class="btn btn-primary"})
+    <p>Group Members:</p>
     <ul>
         @foreach (var usr in @Model.Group.Members)
         {
