--- a/GroupUp/Views/Groups/MemberDetails.cshtml
+++ b/GroupUp/Views/Groups/MemberDetails.cshtml
@@ -12,8 +12,8 @@
 }
 else
 {
-    <p>Group Title: @Model.Group.Title</p>
-    <p>Group Description: @Model.Group.Description</p>
+    <p><strong>Group Title:</strong>  @Model.Group.Title</p>
+    <p><strong>Group Description:</strong>  @Model.Group.Description</p>
     <p><strong>Group Location:</strong> @Model.Group.City, @Model.Group.Country, @Model.Group.Continent</p>
     @Html.ActionLink("Report Group", "ReportGroup", "Reports", new {groupId = Model.Group.GroupId}, new{@class="btn btn-primary"})
     <p>Group Members:</p>
