--- a/GroupUp/Views/Users/Details.cshtml
+++ b/GroupUp/Views/Users/Details.cshtml
@@ -12,8 +12,8 @@
 }
 else
 {
-    <p>Username: @Model.User.AspNetIdentity.UserName</p>
-    <p>Security Level: @Model.User.SecurityLevel</p>
-    <p>Trust Points: @Model.User.TrustPoints</p>
-    <p>Contact Info: @Model.User.ContactInfo</p>
+    <p><strong>Username:</strong> @Model.User.AspNetIdentity.UserName</p>
+    <p><strong>Security Level:</strong>  @Model.User.SecurityLevel</p>
+    <p><strong>Trust Points:</strong>  @Model.User.TrustPoints</p>
+    <p><strong>Contact Info:</strong>  @Model.User.ContactInfo</p>
 }
