REVERT THIS COMMIT IF ANYTHING GOES WRONG

--- a/GroupUp/Views/Groups/ClosedDetails.cshtml
+++ b/GroupUp/Views/Groups/ClosedDetails.cshtml
@@ -37,6 +37,6 @@ else
     </ul>
 
     <hr />
-    @Html.ActionLink("Rate Group", "Rate", new { groupId = Model.ClosedGroup.Group.GroupId },  new {@class="btn btn-primary"});
+    @Html.ActionLink("Rate Group", "Rate", new { groupId = Model.ClosedGroup.Group.GroupId },  new {@class="btn btn-primary"})
 
 }
