--- a/GroupUp/Views/Groups/Create.cshtml
+++ b/GroupUp/Views/Groups/Create.cshtml
@@ -55,6 +55,6 @@
         @Html.ValidationMessageFor(m => m.Continent)
     </div>
 
-    @Html.HiddenFor(m => m.GroupId);
+    @Html.HiddenFor(m => m.GroupId)
     <button class="btn btn-primary" type="submit">Create Group</button>
 }
