--- a/GroupUp/Views/Groups/Edit.cshtml
+++ b/GroupUp/Views/Groups/Edit.cshtml
@@ -21,11 +21,11 @@
         @Html.ValidationMessageFor(m => m.DetailedDescription)
     </div>
 
-    @Html.HiddenFor(m => m.GroupId);
-    @Html.HiddenFor(m => m.MaxUserCapacity);
-    @Html.HiddenFor(m => m.City);
-    @Html.HiddenFor(m => m.Country);
-    @Html.HiddenFor(m => m.Continent);
+    @Html.HiddenFor(m => m.GroupId)
+    @Html.HiddenFor(m => m.MaxUserCapacity)
+    @Html.HiddenFor(m => m.City)
+    @Html.HiddenFor(m => m.Country)
+    @Html.HiddenFor(m => m.Continent)
 
 
 
