--- a/GroupUp/Views/Moderators/UserDetails.cshtml
+++ b/GroupUp/Views/Moderators/UserDetails.cshtml
@@ -1,5 +1,4 @@
-﻿@using Microsoft.Ajax.Utilities
-@model GroupUp.ViewModels.ModeratorUserDetailsViewModel
+﻿@model GroupUp.ViewModels.ModeratorUserDetailsViewModel
 @{
     ViewBag.Title = "UserDetails";
     Layout = "~/Views/Shared/_ModeratorLayout.cshtml";
