--- a/GroupUp/Views/Users/IncreaseSecurityLevel.cshtml
+++ b/GroupUp/Views/Users/IncreaseSecurityLevel.cshtml
@@ -20,7 +20,7 @@
     }
     else
     {
-        @Html.ActionLink("INCREASE SECURITY LEVEL", "IncreaseSecurityLevelTo1");
+        @Html.ActionLink("INCREASE SECURITY LEVEL", "IncreaseSecurityLevelTo1")
     }
 
 }
@@ -37,7 +37,7 @@ else if (Model.User.SecurityLevel < 2)
     }
     else
     {
-        @Html.ActionLink("INCREASE SECURITY LEVEL", "IncreaseSecurityLevelTo2");
+        @Html.ActionLink("INCREASE SECURITY LEVEL", "IncreaseSecurityLevelTo2")
     }
 }
 else
