--- a/GroupUp/Views/Account/ResetPassword.cshtml
+++ b/GroupUp/Views/Account/ResetPassword.cshtml
@@ -1,6 +1,6 @@
 ﻿@model GroupUp.Models.ResetPasswordViewModel
 @{
-    ViewBag.Title = "Parolayı sıfırla";
+    ViewBag.Title = "Reset Password";
 }
 
 <h2>@ViewBag.Title.</h2>
@@ -8,7 +8,7 @@
 @using (Html.BeginForm("ResetPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
-    <h4>Parolanızı sıfırlayın.</h4>
+    <h4>Reset your password</h4>
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
     @Html.HiddenFor(model => model.Code)
