added forgot password functionality

--- a/GroupUp/Views/Account/Login.cshtml
+++ b/GroupUp/Views/Account/Login.cshtml
@@ -44,10 +44,7 @@
                 <p>
                     @Html.ActionLink("Register as a new user", "Register")
                 </p>
-                @* Parola sıfırlama işlevi için hesap doğrulama etkinleştirildiğinde bunu etkinleştirin
-                    <p>
-                        @Html.ActionLink("Parolanızı mı unuttunuz?", "ForgotPassword")
-                    </p>*@
+                @Html.ActionLink("Have you forgotten your password?", "ForgotPassword")
             }
         </section>
     </div>
