--- a/GroupUp/Views/Account/ForgotPassword.cshtml
+++ b/GroupUp/Views/Account/ForgotPassword.cshtml
@@ -1,6 +1,6 @@
 ﻿@model GroupUp.Models.ForgotPasswordViewModel
 @{
-    ViewBag.Title = "Parolanızı mı unuttunuz?";
+    ViewBag.Title = "Forgot Password?";
 }
 
 <h2>@ViewBag.Title.</h2>
@@ -8,7 +8,7 @@
 @using (Html.BeginForm("ForgotPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
-    <h4>E-postanızı girin.</h4>
+    <h4>Enter your E-mail address.</h4>
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
     <div class="form-group">
@@ -19,7 +19,7 @@
     </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="E-posta Bağlantısı" />
+            <input type="submit" class="btn btn-default" value="Send E-mail" />
         </div>
     </div>
 }
