--- a/GroupUp/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/GroupUp/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -1,13 +1,13 @@
 ﻿@{
-    ViewBag.Title = "Parola Onayını Unuttum";
+	ViewBag.Title = "Forgot Password Confirmation";
 }
 
 <hgroup class="title">
-    <h1>@ViewBag.Title.</h1>
+	<h1>@ViewBag.Title.</h1>
 </hgroup>
 <div>
-    <p>
-        Parolanızı sıfırlamak için lütfen e-postanızı kontrol edin.
-    </p>
+	<p>
+		Please check your e-mail for the password reset link.
+	</p>
 </div>
 	
