started implementing tests

--- a/GroupUp/Views/Shared/Error.cshtml
+++ b/GroupUp/Views/Shared/Error.cshtml
@@ -1,9 +1,9 @@
 ﻿@model System.Web.Mvc.HandleErrorInfo
 
 @{
-    ViewBag.Title = "Hata";
+    ViewBag.Title = "Error";
 }
 
-<h1 class="text-danger">Hata.</h1>
-<h2 class="text-danger">İsteğiniz işlenirken bir hata oluştu.</h2>
+<h1 class="text-danger">Error.</h1>
+<h2 class="text-danger">An error has occurred while trying to process your request.</h2>
 
