--- a/GroupUp/Views/Shared/Lockout.cshtml
+++ b/GroupUp/Views/Shared/Lockout.cshtml
@@ -1,10 +1,10 @@
 ﻿@model System.Web.Mvc.HandleErrorInfo
 
 @{
-    ViewBag.Title = "Kilitlendi";
+    ViewBag.Title = "Locked Out";
 }
 
 <hgroup>
-    <h1 class="text-danger">Kilitlendi.</h1>
-    <h2 class="text-danger">Bu hesap kilitlendi, lütfen daha sonra tekrar deneyin.</h2>
+    <h1 class="text-danger">Locked out.</h1>
+    <h2 class="text-danger">This account is locked out. Please try again later.</h2>
 </hgroup>
