some more fixes

--- a/GroupUp/Views/Account/Register.cshtml
+++ b/GroupUp/Views/Account/Register.cshtml
@@ -4,7 +4,7 @@
 }
 @* ReSharper disable once MissingTitleTag *@
 <head>
-    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+    <script src="https://www.google.com/recaptcha/api.js?hl=en" async defer></script>
 </head>
 <h2>@ViewBag.Title.</h2>
 
