--- a/GroupUp/Views/Groups/Requests.cshtml
+++ b/GroupUp/Views/Groups/Requests.cshtml
@@ -6,6 +6,7 @@
 
 <h2>Group Requests</h2>
 
+<p>You must be at least security level 1 to join groups. Click your username on the top right of the screen to do so.</p>
 
 @{
     bool noGroupsShown = true;
