--- a/GroupUp/Views/Groups/Create.cshtml
+++ b/GroupUp/Views/Groups/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model GroupUp.ViewModels.CreateGroupViewModel
 
 @{
-    ViewBag.Title = "title";
+    ViewBag.Title = "Create Group";
 }
 
 <h2>Create Group</h2>
