--- a/GroupUp/Views/Groups/Edit.cshtml
+++ b/GroupUp/Views/Groups/Edit.cshtml
@@ -29,5 +29,5 @@
 
 
 
-    <button class="btn btn-primary" type="submit">Create Group</button>
+    <button class="btn btn-primary" type="submit">Save Changes to Group</button>
 }
